--- a/community/examples/fsi-montecarlo-on-batch.yaml
+++ b/community/examples/fsi-montecarlo-on-batch.yaml
@@ -105,15 +105,29 @@ deployment_groups:
         ]
         '
 
+  - id: network
+    source: modules/network/vpc
+    settings:
+      subnetwork_name: $(vars.deployment_name)-subnet
+
   - id: fsi_notebook
+    kind: terraform
     source: community/modules/compute/notebook
     use: [fsi_bucket]
     settings:
       machine_type: n1-standard-4
+      instance_image:
+        project: cloud-notebooks-managed
+        family: workbench-instances
+      network_interfaces:
+        - subnet: "projects/$(vars.project_id)/regions/$(vars.region)/subnetworks/$(vars.deployment_name)-subnet" # needs a depends on so that this is created after subnet creation gets completed.
 
   - id: fsi_tutorial_files
     source: community/modules/files/fsi-montecarlo-on-batch
     use: [bq-dataset, bq-table, fsi_bucket, pubsub_topic]
+    settings:
+      network_name: $(vars.deployment_name)-net
+      subnetwork_name: $(vars.deployment_name)-subnet
 
   - id: bq_subscription
     source: community/modules/pubsub/bigquery-sub
